--- a/index.html
+++ b/index.html
@@ -166,12 +166,15 @@
             <h2 class="text-center text-uppercase color1 mb-3">My Scills</h2>
           </div>
         </div>
+
         <div class="row">
+			
           <div class="col-md-4 col-sm-12">
             <h4 class="text-center fw-bold mb-3 mt-3">Module1<br />(HTML)</h4>
 
-
             <div class="accordion accordion-flush" id="accordion1">
+
+
               <div class="accordion-item">
                 <h2 class="accordion-header" id="heading1">
                   <button
@@ -191,7 +194,7 @@
                   aria-labelledby="heading1"
                   data-bs-parent="#accordion1"
                 >
-                  <div class="accordion-body">
+                  <div class="accordion-body fst-italic">
                     HTML5 \ REACT
                   </div>
                 </div>
@@ -216,11 +219,12 @@
                   aria-labelledby="heading2"
                   data-bs-parent="#accordion1"
                 >
-                  <div class="accordion-body">
+                  <div class="accordion-body fst-italic">
                     SASS
                   </div>
                 </div>
               </div>
+
               <div class="accordion-item">
                 <h2 class="accordion-header" id="heading3">
                   <button
@@ -240,14 +244,163 @@
                   aria-labelledby="heading3"
                   data-bs-parent="#accordion1"
                 >
-                  <div class="accordion-body">
+                  <div class="accordion-body fst-italic">
                     JavaScrypt / TypeScrypt
                   </div>
                 </div>
               </div>
             </div>
-
+	
           </div>
+
+			 <div class="col-md-4 col-sm-12">
+            <h4 class="text-center fw-bold mb-3 mt-3">Module2<br />(CSS)</h4>
+
+            <div class="accordion accordion-flush" id="accordion2">
+
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading12">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapse12"
+                    aria-expanded="false"
+                    aria-controls="collapse12"
+                  >
+                    Bootstrap
+                  </button>
+                </h2>
+                <div
+                  id="collapse12"
+                  class="accordion-collapse collapse show"
+                  aria-labelledby="heading12"
+                  data-bs-parent="#accordion2"
+                >
+                  <div class="accordion-body fst-italic">
+                    Bootstrap5
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading13">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapse13"
+                    aria-expanded="false"
+                    aria-controls="collapse13"
+                  >
+                    CSS
+                  </button>
+                </h2>
+                <div
+                  id="collapse13"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="heading13"
+                  data-bs-parent="#accordion2"
+                >
+                  <div class="accordion-body fst-italic">
+                    SASS
+                  </div>
+                </div>
+              </div>
+				</div>
+			 </div>
+
+			 <div class="col-md-4 col-sm-12">
+            <h4 class="text-center fw-bold mb-3 mt-3">Module3<br />(JS)</h4>
+
+            <div class="accordion accordion-flush" id="accordion3">
+
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading22">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapse22"
+                    aria-expanded="false"
+                    aria-controls="collapse22"
+                  >
+                    PHP
+                  </button>
+                </h2>
+                <div
+                  id="collapse22"
+                  class="accordion-collapse collapse show"
+                  aria-labelledby="heading22"
+                  data-bs-parent="#accordion3"
+                >
+                  <div class="accordion-body fst-italic">
+                    Codeigniter
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading33">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapse33"
+                    aria-expanded="false"
+                    aria-controls="collapse33"
+                  >
+                    Node
+                  </button>
+                </h2>
+                <div
+                  id="collapse33"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="heading33"
+                  data-bs-parent="#accordion3"
+                >
+                  <div class="accordion-body fst-italic">
+                    Node JS
+                  </div>
+                </div>
+              </div>
+
+
+				  <div class="accordion-item">
+                <h2 class="accordion-header" id="heading44">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapse44"
+                    aria-expanded="false"
+                    aria-controls="collapse44"
+                  >
+                    SQL
+                  </button>
+                </h2>
+                <div
+                  id="collapse44"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="heading44"
+                  data-bs-parent="#accordion3"
+                >
+                  <div class="accordion-body fst-italic">
+                    mySQL
+                  </div>
+                </div>
+              </div>
+
+				</div>
+			 </div>
+
+			 
+
+			 
+
+
         </div>
       </div>
     </section>
